# Research_Copilot

./: README.md  main.py  pyproject.toml  requirements.txt
agents/: research_agent.py
agents/tools/: tools.py
app/: ui.py
chroma_store/: chroma.sqlite3
config/: llm.py
ingestion/: ingest.py
ingestion/dataLoader/: dataLoader.py
ingestion/embedding/: embedding.py
ingestion/vector_store/: store.py
retrieval/: retrieval.py
retrieval/generator/: generator.py
retrieval/retriever/: retriever.py
